<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.legacyminecraft.poseidon</groupId>
    <artifactId>poseidon-craftbukkit</artifactId>
    <version>1.1.11-SNAPSHOT</version>

    <packaging>jar</packaging>

    <name>Project Poseidon</name>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <api.version>unknown</api.version>
    </properties>
    <scm>
        <connection>scm:git:git://github.com/Bukkit/CraftBukkit.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/Bukkit/CraftBukkit.git</developerConnection>
        <url>https://github.com/Bukkit/CraftBukkit</url>
    </scm>
    <repositories>
        <repository>
            <id>bukkit-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots</url>
        </repository>
        <!--        <repository>-->
        <!--            <id>chew-jenkins</id>-->
        <!--            <url>https://jenkins.chew.pw/plugin/repository/everything</url>-->
        <!--        </repository>-->
        <repository>
            <id>jline</id>
            <name>JLine Project Repository</name>
            <url>http://jline.sourceforge.net/m2repo</url>
        </repository>
        <!-- Repository for resolving release dependencies -->
        <repository>
            <id>johnymuffin-nexus-releases</id>
            <url>https://repository.johnymuffin.com/repository/maven-public/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <!-- Repository for resolving snapshot dependencies -->
        <repository>
            <id>johnymuffin-nexus-snapshots</id>
            <url>https://repository.johnymuffin.com/repository/maven-snapshots/</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>johnymuffin-nexus</id>
            <url>https://repository.johnymuffin.com/repository/maven-releases/</url>
        </repository>

        <snapshotRepository>
            <id>johnymuffin-nexus</id>
            <url>https://repository.johnymuffin.com/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>


    <dependencies>
        <!--        <dependency>-->
        <!--            <groupId>org.bukkit</groupId>-->
        <!--            <artifactId>bukkit</artifactId>-->
        <!--            <version>0.0.1-SNAPSHOT</version>-->
        <!--            <type>jar</type>-->
        <!--            <scope>compile</scope>-->
        <!--        </dependency>-->
        <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>bukkit</artifactId>
            <version>0.0.1-POSEIDON</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.sf.jopt-simple</groupId>
            <artifactId>jopt-simple</artifactId>
            <version>6.0-alpha-3</version>
        </dependency>
        <dependency>
            <groupId>jline</groupId>
            <artifactId>jline</artifactId>
            <version>0.9.93</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.7.2</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.14</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>modloader</groupId>
            <artifactId>ModLoaderMP-B1.7.3</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/ModLoaderMP.jar</systemPath>
        </dependency>


        <dependency>
            <groupId>org.avaje</groupId>
            <artifactId>ebean</artifactId>
            <version>2.7.3</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>2.0</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava-collections</artifactId>
            <version>r03</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>20.0.0</version>
        </dependency>

        <!-- Bukkit Mods -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>32.0.0-jre</version>
            <type>jar</type>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.9.0</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

    </dependencies>
    <!-- This builds a completely 'ready to start' jar with all dependencies inside -->
    <build>
        <defaultGoal>clean install</defaultGoal>
<!--        <sourceDirectory>src</sourceDirectory>-->
<!--        <resources>-->
<!--            <resource>-->
<!--                <directory>src</directory>-->
<!--                <excludes>-->
<!--                    <exclude>**/*.java</exclude>-->
<!--                </excludes>-->
<!--            </resource>-->
<!--        </resources>-->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Main-Class>org.bukkit.craftbukkit.Main</Main-Class>
                            <Implementation-Title>Project-Posiden</Implementation-Title>
                            <Implementation-Vendor>RhysB</Implementation-Vendor>
                            <Specification-Title>Bukkit</Specification-Title>
                            <Specification-Version>${api.version}</Specification-Version>
                            <Specification-Vendor>Bukkit Team</Specification-Vendor>
                            <Sealed>true</Sealed>
                        </manifestEntries>
                        <manifestSections>
                            <manifestSection>
                                <name>net/bukkit/</name>
                                <manifestEntries>
                                    <Sealed>true</Sealed>
                                </manifestEntries>
                            </manifestSection>
                            <manifestSection>
                                <name>com/bukkit/</name>
                                <manifestEntries>
                                    <Sealed>true</Sealed>
                                </manifestEntries>
                            </manifestSection>
                            <manifestSection>
                                <name>org/bukkit/</name>
                                <manifestEntries>
                                    <Sealed>true</Sealed>
                                </manifestEntries>
                            </manifestSection>
                        </manifestSections>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <artifactSet>
                                <excludes>
                                    <exclude>junit:junit</exclude>
                                </excludes>
                            </artifactSet>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
